--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -7,7 +7,9 @@
 </head>
 <body>
   <section>
-    <a style="color:#fff" href="{{route('users.index')}}">List of users.</a>
+    <a style="color:#fff" href="{{route('users.index')}}">
+      List of users.
+    </a>
   </section>
 </body>
 </html>
