--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello Adonis</title>
+  <title>Hello Adonis ~</title>
   {{ style('style') }}
 </head>
 <body>
@@ -10,6 +10,7 @@
     <div class="logo"></div>
     <div class="title"></div>
     <div class="subtitle"><p>AdonisJs simplicity will make you feel confident about your code</p></div>
+    <div>hello</div>
   </section>
 </body>
 </html>
