--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {{ css('https://unpkg.com/bootstrap@4.0.0/dist/css/bootstrap.min.css') }}
-  {{ css('main') }}
+  {{ style('https://unpkg.com/bootstrap@4.0.0/dist/css/bootstrap.min.css') }}
+  {{ style('main') }}
   <title>ninghao</title>
 </head>
 <body>
   @!section('content')
+  {{--  <h1>mai.edge</h1>  --}}
   {{ script('https://unpkg.com/jquery@3.3.1/dist/jquery.js') }}
   {{ script('https://unpkg.com/bootstrap@4.0.0/dist/js/bootstrap.min.js') }}
   {{ script('main') }}
