--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -6,6 +6,7 @@
   {{ style('style') }}
 </head>
 <body>
+  @layout('layouts.main')
   <section>
     <div class="logo"></div>
     <div class="title"></div>
